# Lab_2

./: CMakeLists.txt  MatrixGenerator.cpp  README.md  REPORT.md  calculator.cpp
lib/: cblas.h  openblas_config.h
